Add support for groups
