# models/groups_delete_request.go
@@ -1,0 +1,14 @@
+/*
+ * Databricks
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 0.0.1
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package models
+
+type GroupsDeleteRequest struct {
+	GroupName string `json:"group_name"`
+}
