# models/groups_list_members_response.go
@@ -1,0 +1,14 @@
+/*
+ * Databricks
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 0.0.1
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package models
+
+type GroupsListMembersResponse struct {
+	Members []GroupsPrincipalName `json:"members,omitempty"`
+}
