# models/groups_principal_name.go
@@ -1,0 +1,16 @@
+/*
+ * Databricks
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 0.0.1
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package models
+
+type GroupsPrincipalName struct {
+	GroupName string `json:"group_name,omitempty"`
+
+	UserName string `json:"user_name,omitempty"`
+}
